[metadata]
name = energy_usage_optimizer_api
version = 0.0.1
author = You
author_email = your@email.address
#url = https://xebia.com/blog/a-practical-guide-to-setuptools-and-pyproject-toml/
description = Provides an API for optimization of energy usage
long_description = file: README.md
long_description_content_type = text/markdown
keywords = energy_usage_optimizer_api, setuptools
license = MIT License
classifiers =
#    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3


[options]
#packages = find:
#zip_safe = False
python_requires = >=3.11
#include_package_data = True
install_requires =
    fastapi
    uvicorn==0.25.0
    requests
    httpx==0.24.1

#package_dir = src

#package_dir=
#    =src
#packages=find:

#[options.packages.find]
#where=src

#[options.entry_points]
#console_scripts = 
#    energy_usage_optimizer_api = energy_usage_optimizer_api.:main

[options.extras_require]
#notebook = jupyter>=1.0.0, matplotlib
dev = 
    black #==22.1.0
    #flake8#==4.0.1

#[options.package_data]
#example = data/schema.json, *.txt
#* = README.md